# ormx

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/ferriorm-cli/: Cargo.toml
crates/ferriorm-cli/src/: main.rs
crates/ferriorm-cli/src/commands/: db.rs  format.rs  generate.rs  init.rs  migrate.rs  mod.rs
crates/ferriorm-codegen/: Cargo.toml
crates/ferriorm-codegen/src/: client.rs  enums.rs  formatter.rs  generator.rs  lib.rs  model.rs  relations.rs  rust_type.rs
crates/ferriorm-core/: Cargo.toml
crates/ferriorm-core/src/: ast.rs  error.rs  lib.rs  schema.rs  types.rs  utils.rs
crates/ferriorm-fmt/: Cargo.toml
crates/ferriorm-fmt/src/: lib.rs  visitor.rs  writer.rs
crates/ferriorm-fmt/tests/: snapshot.rs
crates/ferriorm-fmt/tests/snapshots/: 01_basic.expected.ferriorm  01_basic.input.ferriorm  02_comments.expected.ferriorm  02_comments.input.ferriorm  03_relations.expected.ferriorm  03_relations.input.ferriorm
crates/ferriorm-lsp/: Cargo.toml
crates/ferriorm-lsp/src/: conv.rs  document.rs  lib.rs  main.rs  server.rs
crates/ferriorm-lsp/src/handlers/: completion.rs  definition.rs  formatting.rs  hover.rs  mod.rs
crates/ferriorm-lsp/tests/: integration.rs
crates/ferriorm-migrate/: Cargo.toml
crates/ferriorm-migrate/src/: diff.rs  introspect.rs  lib.rs  runner.rs  shadow.rs  snapshot.rs  state.rs
crates/ferriorm-migrate/src/sql/: mod.rs  postgres.rs  sqlite.rs
crates/ferriorm-parser/: Cargo.toml
crates/ferriorm-parser/src/: comments.rs  error.rs  grammar.pest  lib.rs  parser.rs  validator.rs
crates/ferriorm-runtime/: Cargo.toml
crates/ferriorm-runtime/src/: client.rs  error.rs  filter.rs  lib.rs  order.rs  transaction.rs
crates/ormx-cli/: Cargo.toml
crates/ormx-cli/src/: main.rs
crates/ormx-cli/src/commands/: db.rs  generate.rs  migrate.rs  mod.rs
crates/ormx-codegen/src/: client.rs  enums.rs  formatter.rs  generator.rs  lib.rs  model.rs  relations.rs
crates/ormx-core/: Cargo.toml
crates/ormx-core/src/: ast.rs  error.rs  lib.rs  schema.rs  types.rs  utils.rs
crates/ormx-migrate/: Cargo.toml
crates/ormx-migrate/src/: diff.rs  introspect.rs  lib.rs  runner.rs  shadow.rs  snapshot.rs  state.rs
crates/ormx-migrate/src/sql/: mod.rs  postgres.rs  sqlite.rs
crates/ormx-parser/src/: error.rs  grammar.pest  lib.rs  parser.rs  validator.rs
crates/ormx-runtime/src/: client.rs  error.rs  filter.rs  lib.rs  order.rs  query.rs  transaction.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/client/: aggregates.md  connecting.md  crud.md  filtering.md  ordering-and-pagination.md  raw-sql.md  relations.md  select.md  transactions.md
docs/src/getting-started/: installation.md  project-structure.md  quick-start.md
docs/src/migrations/: development.md  introspection.md  overview.md  production.md
docs/src/reference/: architecture.md  cli.md  database-support.md  formatting.md  lsp.md
docs/src/schema/: attributes.md  datasource.md  enums.md  fields-and-types.md  generator.md  models.md  overview.md  relations.md
editors/vscode/: .vscodeignore  README.md  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: ferriorm.tmLanguage.json
examples/basic/: Cargo.toml  schema.ferriorm  schema.ormx
examples/basic/src/: main.rs
scripts/: bump-version.py  publish.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: codegen_keyword_collisions.rs  diff_engine.rs  diff_engine_advanced.rs  migration_shadow_sqlite.rs  migration_sqlite.rs  named_indexes.rs  parse_and_generate.rs  parser_edge_cases.rs  relation_names.rs  sqlite_bugfixes.rs  sqlite_crud.rs  tier1_features.rs
