[workspace]
resolver = "3"
members = [
    "crates/ferriorm-core",
    "crates/ferriorm-parser",
    "crates/ferriorm-codegen",
    "crates/ferriorm-migrate",
    "crates/ferriorm-runtime",
    "crates/ferriorm-cli",
    "tests/e2e",
]
exclude = ["examples/basic"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
ferriorm-core = { path = "crates/ferriorm-core" }
ferriorm-parser = { path = "crates/ferriorm-parser" }
ferriorm-codegen = { path = "crates/ferriorm-codegen" }
ferriorm-migrate = { path = "crates/ferriorm-migrate" }
ferriorm-runtime = { path = "crates/ferriorm-runtime" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "chrono", "uuid"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
pest = "2"
pest_derive = "2"

# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Code generation
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
