[package]
name = "ferriorm-codegen"
description = "Code generator for ferriorm ORM - generates type-safe Rust client code"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferriorm-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
prettyplease.workspace = true
