[package]
name = "ferriorm-fmt"
description = "Schema formatter for ferriorm ORM - canonicalizes .ferriorm files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
ferriorm-core.workspace = true
ferriorm-parser.workspace = true
