[package]
name = "ferriorm-lsp"
description = "Language server for ferriorm `.ferriorm` schema files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "ferriorm-lsp"
path = "src/main.rs"

[dependencies]
ferriorm-core.workspace = true
ferriorm-parser.workspace = true
ferriorm-fmt.workspace = true
tower-lsp.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread", "sync"] }
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
