[package]
name = "ferriorm-migrate"
description = "Migration engine for ferriorm ORM - schema diffing and SQL generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
ferriorm-core = { workspace = true, features = ["serde"] }
ferriorm-parser.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
