[package]
name = "ormx-example-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ormx-runtime = { path = "../../crates/ormx-runtime", features = ["postgres", "sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
