[package]
name = "ferriorm-e2e-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ferriorm-core = { path = "../../crates/ferriorm-core", features = ["serde"] }
ferriorm-parser = { path = "../../crates/ferriorm-parser" }
ferriorm-codegen = { path = "../../crates/ferriorm-codegen" }
ferriorm-migrate = { path = "../../crates/ferriorm-migrate", default-features = false, features = ["sqlite"] }
ferriorm-runtime = { path = "../../crates/ferriorm-runtime", default-features = false, features = ["sqlite"] }

sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
syn = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
